gbvm/O/orin_grammar.txt
/* ---------- ORIN GRAMMAR ---------- */

Program 
    -> StatementList

StatementList 
    -> Statement StatementList 
    | ε

Statement 
    -> Declaration 
    | Assignment 
    | ExitStatement 
    | IfStatement 
    | Block

Declaration 
    -> "int" Identifier [ "=" Expression ] ";"

Assignment 
    -> Identifier "=" Expression ";"

ExitStatement 
    -> "exit" "(" Expression ")" ";"

IfStatement 
    -> "if" "(" Expression ")" Statement [ "else" Statement ]

Block 
    -> "{" StatementList "}"

Expression 
    -> RelationalExpression | ArithmeticExpression

RelationalExpression 
    -> AdditiveExpression { RelationalOperator AdditiveExpression }
    
RelationalOperator 
    -> "==" | "!=" | "<" | "<=" | ">" | ">="

ArithmeticExpression 
    -> AdditiveExpression

AdditiveExpression 
    -> MultiplicativeExpression { ("+" | "-") MultiplicativeExpression }

MultiplicativeExpression 
    -> PrimaryExpression { ("*" | "/" | "%") PrimaryExpression }

PrimaryExpression 
    -> "(" Expression ")" 
    | Identifier 
    | INT_L
